chore: change test

--- a/src/config.json
+++ b/src/config.json
@@ -16,7 +16,7 @@
   "hero": {
     "name": "xyla",
     "bio": "xyla github page test!!!",
-    "description": "Clean, Cute, Fast.",
+    "description": "testr",
     "socials": [
       {
         "name": "Github",
