--- a/src/config.json
+++ b/src/config.json
@@ -1,43 +1,43 @@
 {
   "site": {
     "url": "https://XylaAlyx.github.io",
-    "title": "Gyoza",
-    "description": "这是一个使用 Astro 和 React 开发的博客主题。",
+    "title": "xyla",
+    "description": "xyla blog",
     "keywords": "Gyoza,blog,Astro,theme,lxchapu,博客主题",
     "lang": "zh-CN",
     "favicon": "/favicon.ico",
     "appleTouchIcon": "/apple-touch-icon.png"
   },
   "author": {
-    "name": "lxchapu",
-    "twitterId": "@lxchapu",
-    "avatar": "https://s2.loli.net/2024/04/30/ozsnuS5Ihf3xMBG.webp"
+    "name": "xyla",
+    "twitterId": "@XylaAlyx",
+    "avatar": "https://avatars.githubusercontent.com/u/152426527?v=4"
   },
   "hero": {
-    "name": "xyla",
-    "bio": "xyla github page test!!!",
-    "description": "testr",
+    "name": "Xyla",
+    "bio": "Music / Robotics",
+    "description": "wanna hear a construction joke? ",
     "socials": [
       {
         "name": "Github",
         "icon": "icon-github",
-        "url": "https://github.com/lxchapu/astro-gyoza",
+        "url": "https://github.com/XylaAlyx",
         "color": "rgb(24, 23, 23)"
       },
       {
-        "name": "X",
+        "name": "It's called TWITTER",
         "icon": "icon-x",
-        "url": "https://twitter.com/lxchapu",
+        "url": "https://twitter.com/XylaAlyx",
         "color": "rgb(36, 46, 54)"
       },
       {
         "name": "Email",
         "icon": "icon-mail",
-        "url": "mailto:lxchapu@outlook.com",
-        "color": "rgb(212, 70, 56)"
+        "url": "thisisxyla@gmail.com",
+        "color": "rgb(20,50,100)"
       }
     ],
-    "yiyan": "当第一颗卫星飞向大气层外，我们便以为自己终有一日会征服宇宙。"
+    "yiyan": "在找去月亮的好方法"
   },
   "color": {
     "accent": [
@@ -95,7 +95,7 @@
     "perPage": 10
   },
   "footer": {
-    "startTime": "2024-04-14T00:00:00Z"
+    "startTime": "2025-01-09T00:00:00Z"
   },
   "waline": {
     "serverURL": "https://waline.lxchapu.com"
