--- a/src/content/friends/lxchapu.yaml
+++ b/src/content/friends/lxchapu.yaml
@@ -1,4 +1,4 @@
 title: '柃夏chapu'
-description: '生活明朗，万物可爱。'
+description: '本站主题作者'
 link: 'https://www.lxchapu.com'
 avatar: 'https://s2.loli.net/2024/04/23/tIxXmT45RbBDWH8.webp'
